    implementation obviously, but the goal is that it will be easy
    to change to it once that is possible.

- Utility function ``kombu.common.ipublish`` has been removed.

    Use ``Producer(..., retry=True)`` instead.

- Utility function ``kombu.common.isend_reply`` has been removed

    Use ``send_reply(..., retry=True)`` instead.

- Redis: Messages are now restored at the end of the list.

    Contributed by Mark Lavin.

- ``StdConnectionError`` and ``StdChannelError`` is removed
    and :exc:`amqp.ConnectionError` and :exc:`amqp.ChannelError` is used
    instead.

- Message object implementation has moved to :class:`kombu.message.Message`.

- Serailization: Renamed functions encode/decode to
  :func:`~kombu.serialization.dumps` and :func:`~kombu.serialization.loads`.

    For backward compatibility the old names are still available as aliases.

- The ``kombu.log.anon_logger`` function has been removed.

    Use :func:`~kombu.log.get_logger` instead.

- ``queue_declare`` now returns namedtuple with ``queue``, ``message_count``,
  and ``consumer_count`` fields.

- LamportClock: Can now set lock class

- :mod:`kombu.utils.clock`: Utilities for ordering events added.

- :class:`~kombu.simple.SimpleQueue` now allows you to override
  the exchange type used.

    Contributed by Vince Gonzales.

- Zookeeper transport updated to support new changes in the :mod:`kazoo`
  library.

    Contributed by Mahendra M.

- pyamqp/librabbitmq: Transport options are now forwarded as keyword arguments
    to the underlying connection (Issue #214).

- Transports may now distinguish between recoverable and irrecoverable
  connection and channel errors.

- ``kombu.utils.Finalize`` has been removed: Use
  :mod:`multiprocessing.util.Finalize` instead.

- Memory transport now supports the fanout exchange type.

    Contributed by Davanum Srinivas.

- Experimental new `Pyro`_ transport (:mod:`kombu.transport.pyro`).

    Contributed by Tommie McAfee.
