@@ -19,10 +19,6 @@ from .utils import ChannelPromise, maybe_list
 
 __all__ = ['Exchange', 'Queue', 'Producer', 'Consumer']
 
-# XXX compat attribute
-entry_to_queue = Queue.from_dict
-
-
 class Producer(object):
     """Message Producer.
 
